200-01-15  Florian Boor <florian@kernelconcepts.de>

	* hildon/gpe-calendar.png: Use larger icon.
	* Update translations and translation code.
	* Add Japanese translation contributed by Takeshi Hamasaki

2008-01-11  Graham Cobb  <g+770@cobb.uk.net>

	* event-ui.c (build_detail_page): Hack workround for apparent GTK 
	bug (in Chinook release) displaying detail page of event edit dialog
	(build_edit_event_window): remove compilation warning 
	by casting HildonWindow main_window
	(build_edit_event_window): remove compilation warning (hbox)

2007-12-17  Florian Boor <florian@kernelconcepts.de>

	* po/*po: Update translation files.
	* gpe-tp.am: Update translation include to fetch from new location.

2007-11-22  Florian Boor <florian@kernelconcepts.de>

        * po/fi.po: Update Finnish translation

2007-11-05  Graham Cobb  <g+770@cobb.uk.net>

	* configure.c, event-ui.c, import-export.c: Set HILDON_VER to 2

2007-11-02  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac, Makefile.am: build and compile
	changes for new hildon libraries in chinook

2007-10-24  Graham Cobb  <g+770@cobb.uk.net>

	* alarm-dialog.c (event_get_layout): escape characters from summary, etc in alarm dialog window
	Fixes: GLIB WARNING ** Pango - pango-layout.c:910: Error on line 2: Character ' ' is not valid at the start of an entity name; the & character begins an entity; if this ampersand isn't supposed to be an entity, escape it as &amp;
	This Pango error then causes the alarm display to show the event as blank (no summary, etc.)
	
	(ack_all_events_clicked): zero alarm dialog event pointer after deallocating list.
	I am not certain this is necessary but it doesn't do any harm and it may be the cause of a SEGV fault
	I have seen deallocating this list.

2007-10-22  Graham Cobb  <g+770@cobb.uk.net>

	* event-ui.c (build_recurrence_page): Use newly created hildon_number_editor 
	object in call to hildon_number_editor_set_value.  